<a href="/index" class="btn">Log Out</a>:

--- a/src/frontend/templates/incidents.html
+++ b/src/frontend/templates/incidents.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="/" class="btn">Home page</a>
         <a href="/my_fleet" class="btn">My Fleet</a>
-        <a href="/logout" class="btn logout">Log Out</a>
+        <a href="/" class="btn logout">Log Out</a>
     </nav>
 </header>
 
