--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -22,6 +22,7 @@
         <a href="/my_fleet" class="btn">My fleet</a>
         <a href="/login" class="btn">Log In</a>
         <a href="/register" class="btn">Register</a>
+        <a href="/" class="btn">Log Out</a>
     </nav>
 </header>
 
