--- a/src/frontend/templates/my_fleet.html
+++ b/src/frontend/templates/my_fleet.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="/" class="btn">Home page</a>
         <a href="/incidents" class="btn">Incidents</a>
-        <a href="/logout" class="btn logout">Log Out</a>
+        <a href="/" class="btn logout">Log Out</a>
     </nav>
 </header>
 
